--- a/css/global.css
+++ b/css/global.css
@@ -56,6 +56,17 @@ display: table; /* 2 */
   margin:0 auto;
 }
 
+* {
+-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+:focus {
+outline: 0;
+border:none;
+
+}
+
+
+
 
 /*
 --------The normalize 
