--- a/css/buttons.css
+++ b/css/buttons.css
@@ -47,3 +47,15 @@
 	box-shadow:inset 0 2px 0px 0px #c8d3e6, 0 2px 0px 0px #b2c1dc;
 	top: 2px;
 }
+
+.g-input-field{
+	width: 80px;
+	height: 30px;
+	border: 1px solid #ccc;
+	background: none;
+}
+
+.g-input-field:focus{
+	border-color: #ddd;
+}
+
