--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 html{
 	height: 100%;
-	
+}
 
 .all-wrap{
 	-webkit-box-shadow: 0 0 4px #ddd;
@@ -23,6 +23,7 @@ html{
 
 .g-inner{
 	width: 960px;
+	margin: 0 auto;
 }
 
 .m-head{
@@ -117,4 +118,63 @@ html{
 	background-color: #ddd;
 }
 
+/*END search*/
+
+
+/*the sec-head*/
+
+.sec-head{
+	margin-bottom: 10px;
+}
+
+.b-social_header{
+	width: 135px;
+	margin-left: 60px;
+	padding-top: 20px;
+}
+
+.b-social-item{
+	float: left;
+	width: 40px;
+	height: 40px;
+	margin-right: 2px;
+}
+
+.b-social-item:hover{
+	opacity: 0.7;
+}
+
+.soc-tw{
+	background: #fff url('../images/twitter-icon.png') center center no-repeat;
+}
+
+.soc-fb{
+	background: #fff url('../images/facebook-icon.png') center center no-repeat;
+}
+
+.soc-vk{
+	background: #fff url('../images/vkontakte-icon.png') center center no-repeat;
+}
+
+.site-title{
+	width: 50%;
+	margin:0 auto;
+	text-align: center;
+}
+
+.b-phone{
+	width: 200px;
+	color: #000;
+	padding-top: 20px;
+	font-size: 24px;
+}
+
+/*END sec-head*/
+
+/* b-bnn*/
+
+.b-bnn{
+	height: 700px;
+	background: #fff url('../images/bnn-bg.png') center 0 no-repeat;
+}
 
