--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ html{
 	margin:0  auto;
 	width: 100%;
 	min-width:960px;
-	height:auto;
+	height:100%;
 	border-top: 8px solid #000;
 	border-bottom: 8px solid #000;
 	font:14px/1.5  Arial, Helvetica, sans-serif;
