--- a/css/buttons.css
+++ b/css/buttons.css
@@ -59,3 +59,34 @@
 	border-color: #ddd;
 }
 
+.item-title{
+	margin: 0  0 3px 0;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 18px;
+	color: #000;
+}
+
+.item-title-url{
+	color: #000;
+	text-decoration: none;
+}
+
+.item-title-url:hover{
+	color: #333;
+}
+
+.property-table{
+	font-weight: 300;
+	font-size: 14px;
+	color: #000;
+}
+
+.price-zone{
+	font-size: 24px;
+	font-weight: 300;
+}
+
+.new-price{
+	color: #333;
+	font-size: 24px;
+}
