--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 html{
-	height: 100%;
+	height: auto;
 }
 
 .all-wrap{
@@ -30,6 +30,7 @@ html{
 	margin: 30px auto;
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 300;
+	padding: 0 20px;
 }
 
 .top-nav{
@@ -233,7 +234,7 @@ html{
 	-webkit-box-shadow: 0 2px 3px #444;
 	-moz-box-shadow: 0 2px 3px #444;
 	box-shadow: 0 2px 3px #444;
-	padding: 10px;
+	padding: 6px 10px;
 	
 }
 .item-info-inner:after, .item-info-inner:before {
@@ -259,4 +260,40 @@ html{
 	border-width: 16px;
 	left: 50%;
 	margin-left: -16px;
+}
+
+/*END b-bnn*/
+
+/*site-info-wrap*/
+
+.site-info-wrap{
+	background: #fafafb;
+	padding: 53px 0;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+.site-info-item{
+	padding: 0 20px;
+}
+
+.site-info-item_main{
+	width: 340px;
+}
+
+.site-info-item_more, .site-info-item_partners{
+	width: 580px;
+}
+
+.site-info-item-title{
+	font-size: 24px;
+	color:#000;
+	margin: 0 0 15px 0;
+	font-weight: normal;
+}
+
+.b-partners-item{
+	width: 180px;
+	text-align: center;
+	float: left;
+	height: 80px;
 }
