--- a/css/style.css
+++ b/css/style.css
@@ -302,10 +302,24 @@ html{
 
 /*b-main-block*/
 
+.b-main-blocks{
+	padding: 53px 20px;
+	font-family: 'Open Sans', sans-serif;
+}
+
 .b-products{
 	width: 660px;
 }
 
 .b-news{
 	width: 260px;
+}
+
+.main-title, .main-title-url{
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 24px;
+	font-weight: normal;
+	margin:  0 0 10px 0;
+	text-decoration: none;
+	color: #000;
 }
