--- a/css/style.css
+++ b/css/style.css
@@ -323,3 +323,49 @@ html{
 	text-decoration: none;
 	color: #000;
 }
+
+.products-block{
+	width: 100%;
+}
+
+.product-item{
+	width: 48%;
+	background: #fff;
+	padding: 10px;
+	margin: 1%;
+}
+
+.product-item:hover{
+	-webkit-box-shadow: 0 0 3px 2px #e9e9e9;
+	-moz-box-shadow: 0 0 3px 2px #e9e9e9;
+	box-shadow: 0 0 3px 2px #e9e9e9;
+}
+
+.product-item-image{
+	width: 28%;
+	height: 150px;
+	margin-right: 2%;
+}
+
+.product-item-img{
+	min-width: 100%;
+}
+
+.product-info-part{
+	width: 68%;
+	margin-left: 2%;
+	overflow-x: hidden;
+}
+
+.buy-zone_product-item{
+	padding-bottom: 10px;
+}
+
+.property-table_product-item{
+	margin-bottom: 9px;
+}
+
+
+.price-zone_product-item{
+	margin-bottom: 20px;
+}
