--- a/css/style.css
+++ b/css/style.css
@@ -303,17 +303,30 @@ html{
 /*b-main-block*/
 
 .b-main-blocks{
-	padding: 53px 20px;
+	padding: 53px 0px;
 	font-family: 'Open Sans', sans-serif;
 }
 
 .b-products{
-	width: 660px;
+	width: 680px;
+		padding-left: 10px;
+
 }
 
 .b-news{
-	width: 260px;
+	width: 280px;
+
+	
 }
+
+.main-title{
+	padding-left: 10px;
+}
+
+.b-news_main_title{
+	padding: 0;
+}
+
 
 .main-title, .main-title-url{
 	font-family: Arial, Helvetica, sans-serif;
@@ -326,13 +339,23 @@ html{
 
 .products-block{
 	width: 100%;
+
 }
 
 .product-item{
-	width: 48%;
+	width: 330px;
 	background: #fff;
 	padding: 10px;
-	margin: 1%;
+	margin: 1px;
+	height: 215px;
+}
+
+.b-news-item{
+	padding-left: 10px;
+}
+
+.product-item:hover .buy-zone{
+	display: block;
 }
 
 .product-item:hover{
@@ -342,13 +365,17 @@ html{
 }
 
 .product-item-image{
-	width: 28%;
-	height: 150px;
+	width: 80px;
 	margin-right: 2%;
 }
 
+.product-item-image-url{
+	display: block;
+}
+
 .product-item-img{
-	min-width: 100%;
+	max-width: 100%;
+	
 }
 
 .product-info-part{
