--- a/css/style.css
+++ b/css/style.css
@@ -44,9 +44,21 @@ html{
 }
 
 .top-nav-item:not(:first-child){
-	padding-left: 20px;
-	
+	padding-left: 17px;
 	border-left: 1px solid #e9e9e9;
+}
+
+
+/*move to ie*/
+
+.lt-ie9 .top-nav-item{
+	border-left: 1px solid #e9e9e9;
+	padding-left: 14px;
+}
+
+.lt-ie9 .top-nav-item:first-child{
+	border-left: none;
+	padding-left:0;
 }
 
 .top-nav-item{
@@ -306,6 +318,7 @@ html{
     text-indent: -9999px;
     top: 0;
     width: 30px;
+    margin-top: 20px;
 }
 
 .b-partners-carousel-button:hover{
