--- a/css/style.css
+++ b/css/style.css
@@ -461,4 +461,27 @@ html{
 }
 
 
+/*END footer-wrap*/
+
+/*not main*/
+
+.b-navigation{
+	padding-left: 20px;
+	font-family: 'Open Sans', sans-serif;
+}
+
+.sidenav-item{
+	display: block;
+	width: 100%;
+	padding: 10px 5px 10px 20px ;
+	font-size: 16px;
+	text-decoration: none;
+	color: #000;
+}
+
+
+.sidenav-item:hover, .sidenav-item.active{
+	background: #ffcc00;
+}
+
 
