--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,24 @@ html{
 	font-size: 24px;
 }
 
+.cart-wrap{
+	background: #f8f8fa;
+	right: 0;
+	top: 50px;
+	padding: 10px 130px 10px 30px;
+}
+
+.cart-url{
+		font-size: 14px;
+	color: #3399ff;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 300;
+}
+
+.cart-url:hover{
+	text-decoration: none;
+}
+
 /*END sec-head*/
 
 /* b-bnn*/
@@ -282,6 +300,12 @@ html{
 	background: #fafafb;
 	padding: 53px 0;
 	font-family: Arial, Helvetica, sans-serif;
+}
+
+.site-info-wrap-pages{
+	background-image: url('../images/site-info-bg.png');
+	background-position: 0 100%;
+	background-repeat: no-repeat;
 }
 
 .site-info-item{
@@ -467,6 +491,10 @@ html{
 
 /*not main*/
 
+.catalog{
+	padding-top: 23px;
+}
+
 .b-navigation{
 	padding-left: 20px;
 	font-family: 'Open Sans', sans-serif;
@@ -481,9 +509,80 @@ html{
 	color: #000;
 }
 
-
 .sidenav-item:hover, .sidenav-item.active{
 	background: #ffcc00;
 }
 
+.sidebar-box{
+	margin-bottom: 30px;
+}
+
+.sidebar-item{
+	font-family: 'Open Sans', sans-serif;
+	border: 1px solid #e7e7e7;
+	width: 240px;
+	margin-left: 15px;
+}
+
+
+.sidebar-item-title{
+	text-transform: uppercase;
+	font-size: 18px;
+	font-weight: bold;
+}
+
+.sidebar-item-description{
+	font-weight: 300;
+	font-size: 14px;
+}
+
+.sidebar-item-info-zone{
+	padding: 0 15px 15px 15px;
+}
+
+/*END sidebar*/
+
+/*line-block*/
+
+.line-block{
+	margin: 17px auto;
+}
+
+.breadcrumb-item{
+	font-size: 14px;
+	color: #3399ff;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 300;
+}
+
+.breadcrumb-item:hover{
+	text-decoration: none;
+}
+
+.breadcrumb-item.current{
+	color: #000;
+}
+
+.pagination-item{
+	width: 30px;
+	height: 30px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	color: #000;
+	padding-top: 5px;
+	float: left;
+	margin-right: 1px;
+}
+
+
+.pagination-item:hover, .pagination-item.current{
+	background: #ffcc00;
+	color: #fff;
+}
+
+.pagination-arrow{
+	background: none !important;
+	color: #000 !important;
+}
 
