--- a/css/buttons.css
+++ b/css/buttons.css
@@ -8,7 +8,7 @@
 	line-height: 1;
 	font-size: 20px;
 	color:#584400;
-	text-shadow: 1px 0 1px #584400;
+	text-shadow: 1px 0 1px #A09A87;
 	font-family: 'Open Sans', sans-serif;
 	position: relative;
 	display: inline-block;
@@ -31,6 +31,7 @@
 	box-shadow:inset 0 2px 0px 0px #FFCC00, 0 2px 0px 0px #FFB800;
 	top: 2px;
 }
+
 
 /*blue one*/
 
